# AID-Commander-v4.1

./: AID_AI_Orchestration_Design.md  AID_Data_Architecture.md  AID_PRD_Template.md  AID_Test_Framework.py  AID_Workflow_Guide.md  App_creation_process_v2.md  CHANGELOG.md  Integration_Strategy_Template.md  MANIFEST.in  MPD_Template.md  README.md  SETUP.md  TaskFlow_Framework_Recommendations.md  TaskFlow_Implementation_Tasks.md  TaskFlow_PRD.md  TaskFlow_Test_Scenario.py  USER_GUIDE.md  ai_prd_assistant_guidelines.md  ai_prd_assistant_guidelines_v2.md  ai_service.py  ai_setup_wizard.py  aid_commander.py  logger.py  pyproject.toml  setup.py  template_engine.py  test_aid_commander.py
TestAI/: TestAI_PRD.md  TestAI_Tasks.md
v4.1/: CLAUDE.md  CLAUDE_V41.md  FIXES_NEEDED.md  README.md  pyproject.toml  test_comprehensive.py  test_results.json
v4.1/aid_commander_v41/: __init__.py
v4.1/aid_commander_v41/cli/: main.py
v4.1/aid_commander_v41/frameworks/: __init__.py
v4.1/aid_commander_v41/frameworks/pydantic_ai/: __init__.py  knowledge_builder.py
v4.1/aid_commander_v41/knowledge_graph/: __init__.py
v4.1/aid_commander_v41/knowledge_graph/graphiti/: __init__.py  temporal_engine.py
v4.1/aid_commander_v41/knowledge_graph/neo4j/: __init__.py  graph_client.py
v4.1/aid_commander_v41/knowledge_graph/rag/: __init__.py  hybrid_search.py
v4.1/aid_commander_v41/memory_enhanced/: __init__.py  graph_memory_bank.py
v4.1/aid_commander_v41/validation/: __init__.py
v4.1/aid_commander_v41/validation/hallucination/: __init__.py  detection_engine.py
v4.1/aid_commander_v41/validation/multi_layer/: __init__.py  validation_engine.py
v4.1/docs/: BEGINNER_GUIDE_V41.md  HALLUCINATION_DETECTION.md  KNOWLEDGE_GRAPH_SETUP.md
v4.1/examples/hallucination_detection/: before_after_examples.py
v4.1/examples/pydantic_ai/: validated_customer_support.py
v4.1/infrastructure/docker/: docker-compose.yml
v4.1/tests/: test_hallucination_detection.py  test_integration.py  test_multi_layer_validation.py
